# ex-stdin-to-ws

./: Cargo.toml  README.md
src/: main.rs
