[package]
name = "ex-stdin-to-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
tokio = {version = "1.47.1", features =["full"]}
tokio-stream = {version = "0.1.17", features =["full"]}
tokio-tungstenite = "0.27.0"
tokio-util = { version = "0.7.16", features = ["full"] }
